--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,17 +29,9 @@ mark {
 .accordion-button {
 	background-color: white !important;
 	border: none !important;
-	/* -webkit-box-flex: 0;
-	-ms-flex: 0 0 100%;
-	flex: 0 0 100%;
-	max-width: 100%;
-	-webkit-box-orient: horizontal !important;
-	-webkit-box-direction: normal !important;
-	-ms-flex-direction: row !important;
-	flex-direction: row !important;
-	-webkit-box-pack: justify !important;
-  	-ms-flex-pack: justify !important;
-  	justify-content: space-between !important; */
+	position: relative;
+  	width: 100%;
+	
 }
 
 .aside-menu .menu-nav > .menu-item > .menu-heading .menu-text,
