--- a/styles/styleCustomUtilities.css
+++ b/styles/styleCustomUtilities.css
@@ -178,16 +178,16 @@ input.checkbox-small:checked + .sliders-small:before {
 
 .p-part-t {
 	font-size: 13px;
-	font-weight: 600;
-	color: gray;
+	font-weight: 400;
+	/* color: gray; */
 	margin: 0;
 	text-align: left;
 }
 
 .p-part-d {
 	font-size: 11px;
-	font-weight: 500;
-	color: gray;
+	font-weight: 400;
+	/* color: gray; */
 	margin: 0;
 	text-align: center;
 }
