--- a/components/content/sertifikat/style.css
+++ b/components/content/sertifikat/style.css
@@ -1,163 +1,175 @@
 .test * {
-	margin-bottom: 0px;
+  margin-bottom: 0px;
 }
 
 .futura {
-	font-family: "futura";
+  font-family: "futura";
 }
 
 .tandatangan {
-	overflow: inherit;
+  overflow: inherit;
 }
 
 .h-100px {
-	height: auto !important;
+  height: auto !important;
 }
 
 .a4-paper {
-	height: 595px !important;
-	width: 842px !important;
+  height: 595px !important;
+  width: 842px !important;
 }
 
 .a4-font-header {
-	font-size: 4.8vw;
+  font-size: 4.8vw;
 }
 
 .a4-font-normal {
-	font-size: 3.8vw;
+  font-size: 3.8vw;
 }
 
 .responsive-margin-publish {
-	top: 42px;
+  top: 42px;
 }
 
 .responsive-font-size-peserta {
-	font-size: 8px !important;
+  font-size: 6px !important;
 }
 
 .responsive-width {
-	width: 842px !important;
-	height: 595px !important;
+  width: 842px !important;
+  height: 595px !important;
 }
 
 .responsive-nomor-sertifikat {
-	margin-top: 20%;
+  margin-top: 20%;
 }
 
 .responsive-qr-code {
-	margin-top: 40%;
-	margin-left: 85%;
+  margin-top: 40%;
+  margin-left: 85%;
 }
 
 .responsive-normal-font-size {
-	font-size: 6px;
+  font-size: 4px;
 }
 
 .responsive-font-size-nama-peserta {
-	font-size: 12px;
+  font-size: 12px;
 }
 
 .responsive-font-size-sertifikat {
-	font-size: 16px;
+  font-size: 16px;
 }
 
 .responsive-margin-without-background {
-	margin-top: 25%;
+  margin-top: 25%;
 }
 .responsive-nomor-sertifikat-without-background {
-	margin-top: 19%;
+  margin-top: 19%;
 }
 
 .responsive-margin-peserta-1 {
-	margin-top: 25% !important;
+  margin-top: 23% !important;
+}
+
+.list-peserta-window-dimensions {
+  height: 842%;
+  width: 595%;
 }
 
 @media (min-width: 768px) {
-	.responsive-font-size-peserta {
-		font-size: 16px !important;
-	}
+  .responsive-margin-peserta-1 {
+    margin-top: 25% !important;
+  }
+  .responsive-font-size-peserta {
+    font-size: 16px !important;
+  }
 
-	.responsive-margin-publish {
-		top: 135px;
-	}
+  .responsive-margin-publish {
+    top: 135px;
+  }
 
-	.responsive-font-size-nama-peserta {
-		font-size: 16px;
-	}
+  .responsive-font-size-nama-peserta {
+    font-size: 16px;
+  }
 
-	.responsive-font-size-sertifikat {
-		font-size: 24px;
-	}
+  .responsive-font-size-sertifikat {
+    font-size: 24px;
+  }
 
-	.responsive-normal-font-size {
-		font-size: 10px;
-	}
+  .responsive-normal-font-size {
+    font-size: 10px;
+  }
 }
 
 #sertifikat-ck-editor .ck-editor__editable_inline {
-	min-height: 46px;
+  min-height: 46px;
 }
 
 #syllabus-ck-editor .ck-editor__editable_inline {
-	min-height: 46px;
+  min-height: 46px;
 }
 
 @media (min-width: 992px) {
-	.h-100px {
-		height: 100px !important;
-	}
+  .h-100px {
+    height: 100px !important;
+  }
 
-	.tandatangan {
-		overflow: auto;
-	}
+  .tandatangan {
+    overflow: auto;
+  }
 
-	.a4-font-header {
-		font-size: 1.8vw;
-	}
+  .a4-font-header {
+    font-size: 1.8vw;
+  }
 
-	.a4-font-normal {
-		font-size: 0.75vw;
-	}
+  .a4-font-normal {
+    font-size: 0.75vw;
+  }
 
-	.responsive-font-size-peserta {
-		font-size: 20px !important;
-	}
+  .responsive-font-size-peserta {
+    font-size: 20px !important;
+  }
 
-	.responsive-margin-publish {
-		top: 125px;
-	}
+  .responsive-margin-publish {
+    top: 125px;
+  }
 
-	.responsive-font-size-nama-peserta {
-		font-size: 16px;
-	}
+  .responsive-font-size-nama-peserta {
+    font-size: 16px;
+  }
 
-	.responsive-font-size-sertifikat {
-		font-size: 24px;
-	}
+  .responsive-font-size-sertifikat {
+    font-size: 24px;
+  }
 
-	.responsive-normal-font-size {
-		font-size: 10px;
-	}
+  .responsive-normal-font-size {
+    font-size: 10px;
+  }
 }
 
 @media (min-width: 1200px) {
-	.responsive-font-size-peserta {
-		font-size: 24px !important;
-	}
+  .responsive-font-size-peserta {
+    font-size: 24px !important;
+  }
 
-	.responsive-margin-publish {
-		top: 155px !important;
-	}
+  .responsive-margin-publish {
+    top: 155px !important;
+  }
 
-	.responsive-font-size-nama-peserta {
-		font-size: 20px;
-	}
+  .responsive-font-size-nama-peserta {
+    font-size: 20px;
+  }
 
-	.responsive-normal-font-size {
-		font-size: 12px;
-	}
+  .responsive-normal-font-size {
+    font-size: 12px;
+  }
 
-	.responsive-font-size-sertifikat {
-		font-size: 32px;
-	}
+  .responsive-font-size-sertifikat {
+    font-size: 32px;
+  }
+  .list-peserta-window-dimensions {
+    height: 595px;
+    width: 842px;
+  }
 }
