--- a/styles/previewGaleri.module.css
+++ b/styles/previewGaleri.module.css
@@ -20,7 +20,8 @@
 }
 
 .modalsRight{
-  padding: 30px;
+  padding: 25px;
+  /* height: 550px; */
 }
 
 .img-left {
@@ -48,8 +49,8 @@
 
 .description-img {
   text-align: left;
-  width: 100%;
-  height: 260px;
+  width: 98%;
+  height: 140px;
   flex-wrap: wrap;
   overflow-y: auto;
   overflow-wrap: break-word;
@@ -66,8 +67,8 @@
 }
 
 .strip {
-  width: 112.3%;
-  margin-left: -44px;
+  width: 118%;
+  margin-left: -39px;
 }
 
 .listTagGaleri {
@@ -171,7 +172,7 @@
   }
   .description-img {
     width: 98%;
-    height: 235px;
+    height: 140px;
   }
   .strip {
     width: 117%;
@@ -196,6 +197,9 @@
   }
   .rightSideBar {
     width: 660px;
+  }
+  .modalsRight{
+    padding-left: 40px;
   }
   .img-left {
     width: 330px;
